@@ -18,6 +18,7 @@ PostGIS 2.3.8
   - #4326, Allocate enough memory in gidx_to_string (Raúl Marín)
   - #4247, Avoid undefined behaviour in next_float functions (Raúl Marín)
   - #4249, Fix undefined behaviour in raster intersection (Raúl Marín)
+  - #4246, Fix undefined behaviour in ST_3DDistance (Raúl Marín)
 
 PostGIS 2.3.7
 2018/04/06
